Внес изменения
Что сделано:
- Убрал BeanConfig.java, добавил аннотацию на сервис
- Добавил lombok на домен
- Добавил мапперы
- Починил версию spotless
- Добавил Swagger UI для тестов

Для вызова Swagger UI - http://localhost:8081/swagger-ui/index.html
